[metadata]
name = ratinabox
version = 1.10.1
author = Tom George
author_email = tomgeorge1@btinternet.com
project_urls =
    Documentation = https://github.com/TomGeorge1234/RatInABox
    Source = https://github.com/TomGeorge1234/RatInABox
    Tracker = https://github.com/TomGeorge1234/RatInABox/issues
description = RatInABox: A package for simulating spatial navigation and  spatial representation neural data in continuous 2D environments
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy 
    matplotlib
    scipy 
    shapely
python_requires = >=3.7
include_package_data = False

[options.extras_require]
test = 
    pytest 
    scikit-learn
gymnasium = 
    pettingzoo >= 1.23.0

[options.package_data]
ratinabox = data/*
* = README.md
